--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		//setting
 		const config = {
-			ACCESS_TOKEN : '' //your instagram api 
+			ACCESS_TOKEN : 'c9fdd34b09824a1faa13fc8fffc0db90' //your instagram api 
 		}
 
 		window.onload = function(){
