instagram token added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		//setting
 		const config = {
-			ACCESS_TOKEN : 'c9fdd34b09824a1faa13fc8fffc0db90' //your instagram api 
+			ACCESS_TOKEN : '3175701600.c9fdd34.bd927a583d6941168e08692ca0b3ec5c' //your instagram api 
 		}
 
 		window.onload = function(){
