--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="./custom.css">
 	</head>
 	<body>
+	<?php header('Access-Control-Allow-Origin: *'); ?>
 	<script>
 		'use strict';
 
