--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>insta_like</title>
+		<title>miri4ech</title>
+		<link rel="shortcut icon" href="assets/img/favicon.ico" >
 		<link rel="stylesheet" type="text/css" href="assets/css/custom.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css" />
 	</head>
 	<body>
 		<!-- header -->
 		<div class="basic_header">
-			<a href="/">
+			<a href="/" target="_blank">
 				<img src="assets/img/icon.png" class="basic_img">
 			</a>
-			<input id="search" placeholder="title:search">
+			<input id="search" placeholder="title:search">	
 			<div class="clearfix"></div>
 		</div>
 		<!-- content -->
 		<div id="wrapper">
-			<div id="columns"></div>
+			<div id="columns" class="parent-container"></div>
 		</div>
 		<!-- footer -->
 		<div class="basic_footer">Copyright (C) 2017 by miri4ech All Rights Reserved.</div>
@@ -32,5 +34,6 @@
 			}
 		</script>
 		<script src="assets/js/common.js"></script>
+		<script src="assets/js/jquery.magnific-popup.min.js"></script>
 	</body>
 </html>
