heart like feature with cookie

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 			<a href="/" target="_blank">
 				<img src="assets/img/icon.png" class="basic_img">
 			</a>
-			<input id="search" placeholder="title:search">	
+			<input id="search" placeholder="title:search">
+
+<span>
+	<a href="javascript:void(0)" id="heart-click">
+		<img src="assets/img/heart-01.svg">
+		<span data-like="likes">0</span>
+	</a>
+</span>
 			<div class="clearfix"></div>
 		</div>
 		<!-- content -->
@@ -35,5 +42,7 @@
 		</script>
 		<script src="assets/js/common.js"></script>
 		<script src="assets/js/jquery.magnific-popup.min.js"></script>
+		<script src="assets/js/jquery.animateNumber.min.js"></script>
+
 	</body>
 </html>
