like count-up feature modified

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <span>
 	<a href="javascript:void(0)" id="heart-click">
+		<span data-like="like_1">600</span>
 		<img src="assets/img/heart-01.svg">
-		<span data-like="likes">0</span>
 	</a>
 </span>
 			<div class="clearfix"></div>
